--- a/style/style.css
+++ b/style/style.css
@@ -961,6 +961,9 @@ footer .footnote .highlight {
   padding: 5px;
 }
 
+.about-me-text {
+  line-height: 1.2;
+}
 
 @media screen and (max-width: 400px) {
   section:nth-of-type(3) #gallery .mix .card {
