--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,16 @@
     width: 0px;
 }
 
+img {
+  height: 80% !important;
+}
+.HomeProjects-item {
+  height: auto !important;
+}
+
+.HomeProjects-item-caption-index {
+  padding: 0 !important;
+}
 a {
   color: inherit;
   text-decoration: none;
