--- a/static/my.css
+++ b/static/my.css
@@ -265,7 +265,8 @@ html:not([data-js-focus-visible]) .sqs-product-quick-view-button-wrapper .sqs-pr
     width: 100%;
     flex-grow: 0;
     flex-shrink: 0;
-    padding-top: 20px
+    padding-top: 20px;
+    padding-bottom: 20px
 }
 
 .HomeProjects-footer-display {
